test/fail/io/read_from_closed.lly
#[
IOError: IO operation on closed file.
Traceback:
    from [C]: in File.readline
    from read_from_closed.lly:9: in __main__
]#

stdin.close()
stdin.readline()
